# mdbook-drawio

./: .gitignore  404.html  Cargo.toml  README.md  flake.nix  index.html  print.html  searchindex.js  toc.html  toc.js
.github/workflows/: ci.yml
chapter/: subchapter.html
chapter/subchapter/: subchapter2.html
example/: book.toml
example/diagrams/: hello.drawio
example/diagrams/subdiagrams/: sub.drawio
example/src/: SUMMARY.md  introduction.md
example/src/chapter/: subchapter.md
example/src/chapter/subchapter/: subchapter2.md
src/: lib.rs  main.rs
