[package]
name = "mdbook-drawio"
version = "0.1.0"
edition = "2021"

[dependencies]
mdbook = { version = "=0.4.37", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
regex = "1"
pathdiff = "0.2"
which = "6"
log = "0.4"
env_logger = "0.10"

[lib]
name = "mdbook_drawio"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3"
